// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateTime parses date correctly 1`] = `
<div
  className="text-muted"
>
  -
</div>
`;

exports[`DateTime parses date correctly 2`] = `
<div
  className="text-muted"
>
  No content
</div>
`;

exports[`DateTime parses date correctly 3`] = `
<div
  className="text-muted"
>
  -
</div>
`;

exports[`DateTime parses date correctly 4`] = `
<div
  className="text-muted"
>
  -
</div>
`;

exports[`DateTime parses date correctly 5`] = `
<div>
  07/02/2018
</div>
`;

exports[`DateTime parses date correctly 6`] = `
<div>
  07/02/2018
</div>
`;

exports[`DateTime parses date correctly 7`] = `
<div>
  1st Jan 2017 12:00am - 1st Feb 2017 12:00am
</div>
`;

exports[`DateTime parses date correctly 8`] = `
<div>
  1st Jan 2017 12:00am - 1st Feb 2017 12:00am
</div>
`;

exports[`DateTime parses date correctly 9`] = `
<div>
  1st Jan 2017 12:00am to 1st Feb 2017 12:00am
</div>
`;
